sticky menu and overflow fixes

--- a/frontend/src/admin/ui/index.css
+++ b/frontend/src/admin/ui/index.css
@@ -4,11 +4,10 @@ html,
 body,
 #root,
 .hav-admin-app {
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   font-size: 16px;
   font-family: "Noto Sans", sans-serif;
-  overflow: hidden;
 }
 
 .hav-admin-app {
@@ -27,20 +26,19 @@ body,
   flex-grow: 0;
   flex-shrink: 0;
   flex-basis: 20vw;
-  display: flex;
-  flex-direction: column;
+  position: relative;
 }
 
 .hav-admin-main-menu nav {
-  flex-grow: 1;
+  position: sticky;
+  top: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 1rem;
 }
 
-.hav-admin-main-menu > img {
-  /* display: none; */
+.hav-admin-main-menu nav img {
   max-width: 80%;
   margin: 0.5em 10%;
   height: auto;
